Apply SonarLint recommendations